--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Conditional Profile Card Generator</title>
     <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
     <script
       src="https://kit.fontawesome.com/072e5df971.js"
@@ -68,7 +68,7 @@
           <option value="Miami">Miami</option>
           <option value="Munich">Munich</option>
           <option value="Caracas">Caracas</option>
-          <option value="Toronto">Toronto</option>
+          <option value="Barranquilla">Barranquilla</option>
         </select>
       </li>
       <li>
@@ -77,7 +77,7 @@
           <option value="">null</option>
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
-          <option value="Canada">Canada</option>
+          <option value="Colombia">Colombia</option>
           <option value="Venezuela">Venezuela</option>
         </select>
       </li>
